# Beer-Demand-Planning-Mini-Stack

./: .gitignore  DATA_SOURCES.md  README.md  package.json  pyproject.toml  tsconfig.json
.github/workflows/: main.yml  pages.yml
dashboard/: build_log.txt  package-lock.json  package.json  vite.config.ts
dashboard/public/data/: collective_arts_catalog.json  collective_arts_summary.json  dim_product.csv  dq_negative_pos.csv  pipeline_report.json  production_plan_weekly.csv
dashboard/src/: App.tsx  index.css
dashboard/src/data/: dataSources.ts
dashboard/src/pages/: Catalog.tsx  CollectiveArts.tsx  Forecast.tsx  Overview.tsx  Planning.tsx  SalesPlan.tsx
data/curated/: fact_inventory_daily.csv  fact_sales_daily.csv
data/outputs/: dq_negative_pos.csv  forecast_daily.csv  forecast_metrics.csv  pipeline_report.json  production_plan_weekly.csv
data/raw/: ecommerce_sales.csv  inventory.csv  pos_sales.csv  sku_map.csv
docs/: ARCHITECTURE.md  DATA_DICTIONARY.md  OVERVIEW.md  RUNBOOK.md  TESTING.md
pipeline/: __init__.py  __main__.py  cli.py  collective_arts_collect.py  forecast.py  generate_data.py  generate_data.ts  ingest.py  plan.py  transform.py
tests/: test_pipeline.py
