[project]
name = "beer-planning"
version = "0.1.0"
description = "Beer Demand Planning Mini-Stack"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "pandera>=0.18.0",
    "scikit-learn>=1.3.0",
    "click>=8.0.0",
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "openpyxl>=3.1.0"
]

[tool.setuptools]
packages = ["pipeline"]
